force-app/main/default/objects/Student__c/recordTypes/Alumnii.recordType-meta.xml
<RecordType>
    <fullName>Alumnii</fullName>
    <active>true</active>
    <label>Alumnii</label>
</RecordType>