force-app/main/default/objects/Student__c/recordTypes/Enrolling.recordType-meta.xml
<RecordType>
    <fullName>Enrolling</fullName>
    <active>true</active>
    <label>Enrolling</label>
</RecordType>