force-app/main/default/objects/Student__c/recordTypes/Instructor.recordType-meta.xml
<RecordType>
    <fullName>Instructor</fullName>
    <active>true</active>
    <label>Instructor</label>
</RecordType>