force-app/main/default/objects/Student__c/validationRules/Both_Phone_and_Email_is_requied.validationRule-meta.xml
<ValidationRule>
    <fullName>Both_Phone_and_Email_is_requied</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW(),
   RecordType.DeveloperName = &apos;Enrolling&apos;,  
   OR(
     ISBLANK(Email__c) ,  ISBLANK(Mobile__c )
     )
)</errorConditionFormula>
    <errorMessage>Both Mobile and Email is required</errorMessage>
</ValidationRule>