force-app/main/default/objects/Student__c/validationRules/Either_Mobile_or_Phone_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Either_Mobile_or_Phone_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISNEW(),
RecordType.DeveloperName = &apos;Alumnii&apos;,
ISBLANK( Email__c ),ISBLANK( Mobile__c )
)</errorConditionFormula>
    <errorMessage>Email or Mobile is required</errorMessage>
</ValidationRule>