force-app/main/default/objects/Student__c/validationRules/Restict_record_type_for_profile.validationRule-meta.xml
<ValidationRule>
    <fullName>Restict_record_type_for_profile</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW(),
   RecordType.DeveloperName = &apos;Enrolling&apos;,
   $Profile.Name = &apos;Principal&apos;
)</errorConditionFormula>
    <errorMessage>restrict record type for principal</errorMessage>
</ValidationRule>