force-app/main/default/objects/Student__c/listViews/Students_list.listView-meta.xml
<ListView>
    <fullName>Students_list</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Email__c</columns>
    <filterScope>Mine</filterScope>
    <label>Students list</label>
</ListView>