force-app/main/default/objects/Student__c/listViews/Students_New_List.listView-meta.xml
<ListView>
    <fullName>Students_New_List</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <label>Students New List</label>
</ListView>